fix: vfs perf and memory leaks
fix: resources located next to bin
fix: python vfs for lang resources
fix: python imports (don't fail due to unregistered unsafe allocation)
chore: add new ffm config
chore: cleanup redundant profiles and jars

Signed-off-by: Sam Gammon <sam@elide.dev>